logs/mobility/build.make.015.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:26:25: error: ‘ros::Publisher’ has not been declared
 void givePublisher(ros::Publisher pub) {infoLogPublisher = pub;}
                         ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:42:1: error: ‘Publisher’ in namespace ‘ros’ does not name a type
 ros::Publisher infoLogPublisher;
 ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.h: In member function ‘void DropOffController::givePublisher(int)’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.h:26:41: error: ‘infoLogPublisher’ was not declared in this scope
 void givePublisher(ros::Publisher pub) {infoLogPublisher = pub;}
                                         ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In member function ‘void DropOffController::calculateDecision()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:98:17: error: ‘print’ was not declared in this scope
 print("lol true");
                 ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:125:1: error: ‘dropOffController’ does not name a type
 dropOffController.givePublisher(infoLogPublisher);
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
